--- a/categoria-carreras.html
+++ b/categoria-carreras.html
@@ -1,58 +1,68 @@
 <!doctype html>
 <html lang="es">
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>PixelPlay Games — Carreras</title>
-<link rel="stylesheet" href="CSS/styles.css">
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-<body class="bg-custom text-dark">
-  
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <title>PixelPlay Games — Carreras</title>
+  <link rel="stylesheet" href="CSS/styles.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+</head>
+<body class="bg-custom">
+
 <header class="container header bg-custom text-primary mb-4">
-  <div class="brand">PixelPlay Games</div>
+  <div class="brand fw-bold">PixelPlay Games</div>
   <nav class="nav">
     <a href="index.html" aria-label="Ir al inicio">Inicio</a>
     <a href="categoria-accion.html">Acción</a>
-        <a href="categoria-aventura.html">Aventura</a>
-        <a href="categoria-deportes.html">Deportes</a>
-        <a href="categoria-carreras.html" class="badge">Carreras</a>
-        <a href="categoria-indie.html">Indie</a>
+    <a href="categoria-aventura.html">Aventura</a>
+    <a href="categoria-deportes.html">Deportes</a>
+    <a href="categoria-carreras.html" class="badge bg-primary text-white">Carreras</a>
+    <a href="categoria-indie.html">Indie</a>
   </nav>
 </header>
 
-  
 <section class="container hero text-white">
   <h1 style="margin:0 0 8px">Carreras</h1>
-  <p class="small">Página de categoría Carreras.</p>
+  <p class="small">Experimenta la velocidad con los mejores juegos de carreras.</p>
 </section>
 
-  <main class="container">
-    <div class="grid">
-      <article class="card bg-custom text-dark border-0">
-        <div class="thumb">
+<main class="container">
+  <div class="row">
+    <div class="col-md-6 mb-4">
+      <article class="category-card">
+        <div class="category-thumb">
           <img src="img/assetto-corsa.jpg" alt="Portada del juego Assetto Corsa">
         </div>
-        <div class="content">
+        <div class="category-content">
           <h3>Assetto Corsa</h3>
-          <p>Simulador de carreras.</p>
+          <p>Simulador de carreras con física realista y amplia personalización.</p>
           <div class="price">$19.990</div>
         </div>
       </article>
+    </div>
     
-      <article class="card bg-custom text-dark border-0">
-        <div class="thumb">
+    <div class="col-md-6 mb-4">
+      <article class="category-card">
+        <div class="category-thumb">
           <img src="img/forza-horizon-5.png" alt="Portada del juego Forza Horizon 5">
         </div>
-        <div class="content">
+        <div class="category-content">
           <h3>Forza Horizon 5</h3>
           <p>Simulador de conducción de mundo abierto situado en un México ficticio.</p>
           <div class="price">$59.990</div>
         </div>
       </article>
-    
     </div>
-  </main>
-  <div class="container" style="display:flex; justify-content:space-between; margin-top:10px;"><a class="badge" href="categoria-deportes.html">← Deportes</a><span></span><a class="badge" href="categoria-indie.html">Indie →</a></div>
-  
+  </div>
+</main>
+
+<div class="container navigation-links">
+  <div class="d-flex justify-content-between mt-4">
+    <a class="badge" href="categoria-deportes.html">← Anterior: Deportes</a>
+    <a class="badge" href="categoria-indie.html">Siguiente: Indie →</a>
+  </div>
+</div>
+
 <footer class="container footer bg-custom text-primary mt-4">
   <div>© 2025 PixelPlay Games — Sitio demostrativo para actividad PGY3221.</div>
 </footer>
