--- a/categoria-carreras.html
+++ b/categoria-carreras.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="CSS/styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
+<script src="carrito.js"></script>
+
 <body class="bg-custom">
 
 <header class="container header bg-custom text-primary mb-4">
