--- a/login.html
+++ b/login.html
@@ -6,28 +6,32 @@
     <link rel="stylesheet" href="CSS/styles.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
   </head>
-  <body class="bg-custom text-dark container py-5">
-    <h2 class="mb-4 text-center text-primary">Iniciar sesión</h2>
-    <form id="formlogin" class="needs-validation text-dark" novalidate>
-      <div class="mb-3">
-        <label for="emailLogin" class="form-label">Correo</label>
-        <input type="email" class="form-control" id="emailLogin" required>
-        <div class="invalid-feedback">Ingrese un correo válido.</div>
+  <body class="bg-custom">
+    <div class="form-page">
+      <div class="form-container">
+        <h2 class="form-title">Iniciar sesión</h2>
+        <form id="formlogin" class="needs-validation" novalidate>
+          <div class="mb-3">
+            <label for="emailLogin" class="form-label">Correo</label>
+            <input type="email" class="form-control" id="emailLogin" required>
+            <div class="invalid-feedback">Ingrese un correo válido.</div>
+          </div>
+          <div class="mb-3">
+            <label for="passwordLogin" class="form-label">Contraseña</label>
+            <input type="password" class="form-control" id="passwordLogin" required>
+            <div class="invalid-feedback">Ingrese su contraseña.</div>
+          </div>
+          <button type="submit" class="btn btn-primary w-100">Ingresar</button>
+        </form>
+        <div class="form-links">
+          <a href="recuperar.html">¿Olvidaste tu contraseña?</a>
+          <br>
+          <a href="registro.html">Registrarse</a>
+          <br>
+          <a href="index.html">Volver al inicio</a>
+        </div>
       </div>
-      <div class="mb-3">
-        <label for="passwordLogin" class="form-label">Contraseña</label>
-        <input type="password" class="form-control" id="passwordLogin" required>
-        <div class="invalid-feedback">Ingrese su contraseña.</div>
-      </div>
-      <button type="submit" class="btn btn-primary w-100">Ingresar</button>
-    </form>
-    <p class="mt-3 text-center text-primary">
-      <a href="recuperar.html">¿Olvidaste tu contraseña?</a>
-      <br>
-      <a href="registro.html">Registrarse</a>
-      <br>
-      <a href="index.html">Volver al inicio</a>
-    </p>
+    </div>
     <script src="validaciones.js" defer></script>
   </body>
 </html>
