--- a/index.html
+++ b/index.html
@@ -10,18 +10,10 @@
 <body class="bg-custom">
 
 <header class="container header bg-custom text-primary mb-4">
- <a href="index.html" class="brand d-inline-flex align-items-center" aria-label="Ir al inicio">
-  <img src="img/ppg-logo.png" alt="PixelPlay Games" class="ppg-logo">
-</a>
+  <a href="index.html" class="brand d-inline-flex align-items-center" aria-label="Ir al inicio">
+    <img src="img/ppg-logo.png" alt="PixelPlay Games" class="ppg-logo">
+  </a>
 
-  <nav class="nav" id="navUsuario">
-  <a href="login.html" class="btn btn-primary btn-sm" id="loginLink">Iniciar sesión</a>
-  <a href="perfil.html" class="text-primary md d-none" id="perfilLink">Mi Perfil</a>
-  <a href="admin.html" class="admin-btn btn-sm d-none" id="adminLink">Admin</a>
-  <a href="registro.html" class="btn btn-outline-primary btn-sm" id="registroLink">Registrarse</a>
-  <span class="user-welcome d-none" id="userWelcome"></span>
-  <button class="btn logout-btn btn-sm d-none" id="logoutBtn" onclick="handleLogout()">Cerrar sesión</button>
-</nav>
   <nav class="nav">
     <a href="index.html" aria-label="Ir al inicio" class="text-primary fw-bold">Inicio</a>
     <a href="categoria-accion.html" class="text-primary">Acción</a>
@@ -30,12 +22,15 @@
     <a href="categoria-carreras.html" class="text-primary">Carreras</a>
     <a href="categoria-indie.html" class="text-primary">Indie</a>
   </nav>
+  
+  <!-- NAVEGACIÓN DE USUARIO (SOLO UN ELEMENTO) -->
   <nav class="nav" id="navUsuario">
-    <a href="login.html" class="btn btn-primary btn-sm">Iniciar sesión</a>
+    <a href="login.html" class="btn btn-primary btn-sm" id="loginLink">Iniciar sesión</a>
     <a href="perfil.html" class="text-primary md d-none" id="perfilLink">Mi Perfil</a>
-    <a href="admin.html" class="text-primary md d-none" id="adminLink">Admin</a>
-    <a href="registro.html" class="btn btn-outline-primary btn-sm">Registrarse</a>
-    <a href="#" class="btn btn-outline-danger btn-sm d-none" id="logoutBtn">Cerrar sesión</a>
+    <a href="admin.html" class="admin-btn btn-sm d-none" id="adminLink">Admin</a>
+    <a href="registro.html" class="btn btn-outline-primary btn-sm" id="registroLink">Registrarse</a>
+    <span class="user-welcome d-none" id="userWelcome"></span>
+    <button class="btn logout-btn btn-sm d-none" id="logoutBtn" onclick="handleLogout()">Cerrar sesión</button>
   </nav>
 </header>
 
@@ -132,6 +127,12 @@
 </footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 <script>
+  // Función para cerrar sesión
+  function handleLogout() {
+    localStorage.removeItem('usuarioActual');
+    window.location.href = 'index.html';
+  }
+
   // verificar si hay un usuario logueado
   document.addEventListener('DOMContentLoaded', function() {
     const usuario = JSON.parse(localStorage.getItem('usuarioActual'));
