--- a/perfil.html
+++ b/perfil.html
@@ -5,6 +5,11 @@
   <title>Modificar Perfil</title>
   <link rel="stylesheet" href="CSS/styles.css">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <style>
+    .fecha-blanca {
+      color: white !important;
+    }
+  </style>
  </head>
  <body class="bg-custom">
   <div class="form-page">
@@ -18,7 +23,7 @@
         </div>
         <div class="mb-3">
           <label class="profile-info-label">Fecha de registro:</label>
-          <span id="fechaRegistro" class="ms-2"></span>
+          <span id="fechaRegistro" class="ms-2 fecha-blanca"></span>
         </div>
       </div>
       
