--- a/carrito.html
+++ b/carrito.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="CSS/styles.css" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
-<body class="bg-custom container py-4">
+<body class="bg-custom container py-4" id="ppg-cart-page">
   <header class="mb-4 d-flex align-items-center gap-2">
     <h1 class="text-primary m-0">🛒 Carrito</h1>
     <a class="btn btn-link" href="index.html">← Seguir comprando</a>
@@ -40,7 +40,6 @@
 
   <a href="index.html" class="btn btn-primary">Volver al inicio</a>
 
-  
   <script src="carrito.js"></script>
 </body>
 </html>
