--- a/categoria-accion.html
+++ b/categoria-accion.html
@@ -61,6 +61,36 @@
   </div>
 </main>
 
+<main class="container">
+  <div class="row">
+    <div class="col-md-6 mb-4">
+      <article class="category-card">
+        <div class="category-thumb">
+          <img src="img/assassins-creed-shadows.webp" alt="Portada del juego assassins creed shadows">
+        </div>
+        <div class="category-content">
+          <h3>Assassins Creed Shadows</h3>
+          <p>Juego de mundo abierto basado en Japón.</p>
+          <div class="price">$59.990</div>
+        </div>
+      </article>
+    </div>
+    
+    <div class="col-md-6 mb-4">
+      <article class="category-card">
+        <div class="category-thumb">
+          <img src="img/cyberpunk.jpg" alt="Portada del juego Cyberpunk 2077">
+        </div>
+        <div class="category-content">
+          <h3>Cyberpunk 2077</h3>
+          <p>Juego de acción y mundo abierto basado en un futuro distópico donde juegas como V, un mercenario.</p>
+          <div class="price">$24.990</div>
+        </div>
+      </article>
+    </div>
+  </div>
+</main>
+
 <div class="container navigation-links">
   <div class="d-flex justify-content-between mt-4">
     <span></span>
